objects/IP_Cell__c.object
<CustomObject>
    <fields>
        <fullName>AHCellCount__c</fullName>
        <label>Cellcount (Enter manually if  not rectan</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Array_Name__c</fullName>
        <label>Array Name</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IPElement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IP_Element</label>
        <referenceTo>IP_Element__c</referenceTo>
        <relationshipLabel>IP Cell</relationshipLabel>
        <relationshipName>IP_Cell</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>M_tmp_configname__c</fullName>
        <label>M-tmp_configname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>M_tmp_configurlg__c</fullName>
        <label>M-tmp_configurlg</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NOTEID__c</fullName>
        <label>M-NOTEID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abits__c</fullName>
        <label>#Bits/word</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acomm1__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acomm__c</fullName>
        <label>M-acomm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acomp1__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>acomp__c</fullName>
        <label>Add Array</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adimx__c</fullName>
        <label>Design Dimensions X mm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adimy__c</fullName>
        <label>Design Dimensions Y mm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ahcrect__c</fullName>
        <label>Is Analog Hard Cell Rectangular</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>analogcircuitcount__c</fullName>
        <label>AnalogCircuitCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>analogdevicearea__c</fullName>
        <label>M-analogdevicearea</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>analogtransistorcount__c</fullName>
        <label>Analog Transistor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>aname1__c</fullName>
        <label>Compileable Arrays - Fixed (none listed)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aname__c</fullName>
        <label>Array Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqty1__c</fullName>
        <label>Array Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aqty__c</fullName>
        <label>Quantity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ardun__c</fullName>
        <label>M-ardun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>area2logicc__c</fullName>
        <inlineHelpText>cells</inlineHelpText>
        <label>Technology cell dimensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>area2logiccells_calc__c</fullName>
        <label>Technology cell dimensions X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>area2logicg__c</fullName>
        <inlineHelpText>gates</inlineHelpText>
        <label>Technology gate dimensions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>area2logicgates_calc__c</fullName>
        <label>Technology cell dimensions Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>atran__c</fullName>
        <label># Trans/Bit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>atype__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>aword__c</fullName>
        <label># Words</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>boundx__c</fullName>
        <inlineHelpText>mm x</inlineHelpText>
        <label>Analog Hard Cell Bounding  Box X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>boundy__c</fullName>
        <inlineHelpText>mm y</inlineHelpText>
        <label>Analog Hard Cell Bounding Box Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g_1__c</fullName>
        <inlineHelpText>( c2g_1 cells/gate)</inlineHelpText>
        <label>Technology cell togate conversion factor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cellkey__c</fullName>
        <label>CellKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cellname__c</fullName>
        <label>Cell Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>celltype__c</fullName>
        <label>Cell Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SoC</fullName>
                </value>
                <value>
                    <fullName>Enablement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ckmeth__c</fullName>
        <label>M-ckmeth</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>configurable__c</fullName>
        <label>Is Synthesizable Cell Configurable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>contact__c</fullName>
        <label>Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copy__c</fullName>
        <label>M-copy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>corekey__c</fullName>
        <label>Corekey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>createdby__c</fullName>
        <label>M-createdby</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>date__c</fullName>
        <label>IP Cell Data Created</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>designer__c</fullName>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>devstatus__c</fullName>
        <label>Dev Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dimx__c</fullName>
        <inlineHelpText>mm</inlineHelpText>
        <label>Total Design Dimensions X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dimx_in__c</fullName>
        <inlineHelpText>mm</inlineHelpText>
        <label>Total Design Dimensions 2 X</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dimy__c</fullName>
        <inlineHelpText>mm</inlineHelpText>
        <label>Total Design Dimensions Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dimy_in__c</fullName>
        <inlineHelpText>mm</inlineHelpText>
        <label>Total Design Dimensions 2 Y</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docauthor__c</fullName>
        <label>Authors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editabits__c</fullName>
        <label>M-editabits</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editacomm__c</fullName>
        <label>M-editacomm</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editacomp__c</fullName>
        <label>M-editacomp</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editadimx__c</fullName>
        <label>M-editadimx</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editadimy__c</fullName>
        <label>M-editadimy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editaname__c</fullName>
        <label>M-editaname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editaqty__c</fullName>
        <label>M-editaqty</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editardun__c</fullName>
        <label>M-editardun</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editatran__c</fullName>
        <label>M-editatran</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editatype__c</fullName>
        <label>M-editatype</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editaword__c</fullName>
        <label>M-editaword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editdocauthor__c</fullName>
        <label>Authors</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Andy Anderson/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Adrian Butter/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Ahmed Y Ginawi/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Aidan Kelly/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Allen Brouillette/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Allyson Stewart/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Anjali R Malladi/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Anuradha Srikantaiah1/India/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Barbara Powers/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bill Danilich/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bill N On/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bob Lynch/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bret Rockwell/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Brian Worth/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bruce Ditmyer/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Bryan McDonald/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Camil Fayad/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Carolyn Paddock-Moore/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Catherine Keim/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Charles P Carpenter/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Chris Rebeor/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christine Fuller/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher G Murphy/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher Kiegle/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher Reynolds/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Chris Ro/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher Rosato/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Christopher R White/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Colleen Wemple/US/GF/IDE</fullName>
                </value>
                <value>
                    <fullName>Cristina C Pierce/US/GF/IDE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>flgacompV__c</fullName>
        <label>Compileable Arrays -  Variable</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>flgsizingdata__c</fullName>
        <label>Sizing data required</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>form__c</fullName>
        <label>M-form</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ip__c</fullName>
        <formula>IPElement__r.ip__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ipcell_Design_System__c</fullName>
        <formula>IPElement__r.technology__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Design System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ipcell_ip__c</fullName>
        <formula>IPElement__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ipkey__c</fullName>
        <formula>IPElement__r.ipkey__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IPKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iptype__c</fullName>
        <formula>Text(IPElement__r.iptype__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IP Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ispsomastered__c</fullName>
        <label>Mastered in PSO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lastupdated__c</fullName>
        <label>LastUpdated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>logicarea__c</fullName>
        <label>Unrouted Random Logic Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>logiccells__c</fullName>
        <inlineHelpText>cells</inlineHelpText>
        <label>Unrouted Random Logic Cells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>logiccells_calc__c</fullName>
        <inlineHelpText>cells</inlineHelpText>
        <label>Unrouted Random LogicCells(g2c/cell)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>logicgates__c</fullName>
        <inlineHelpText>gates</inlineHelpText>
        <label>Unrouted Random LogicGates(c2g/gates)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>logicgates_calc__c</fullName>
        <label>Unrouted Random Logic Gates</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mgr__c</fullName>
        <label>Mgr</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>missingdata__c</fullName>
        <label>MissingData</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numio__c</fullName>
        <label>M-numio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>numlatches__c</fullName>
        <label>Number of Latches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>originalmodtime__c</fullName>
        <label>M-originalmodtime</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rambit__c</fullName>
        <label>RAM bits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ref__c</fullName>
        <label>M-$ref</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>regarrbit__c</fullName>
        <label>RA bits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>restrictreader__c</fullName>
        <label>Readers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rombit__c</fullName>
        <label>ROM bits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>routarea__c</fullName>
        <inlineHelpText>cells</inlineHelpText>
        <label>Total Area Displaced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>routeddigitalarea__c</fullName>
        <inlineHelpText>( rda_dimxum um x
 rda_dimyum um/cell)</inlineHelpText>
        <label>Routed Digital Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>routeddigitalcells__c</fullName>
        <label>RoutedDigitalCells</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sizing_type__c</fullName>
        <label>Sizing Information</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sizingdataenteredin__c</fullName>
        <label>Sizing Data Entered In</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cells</fullName>
                </value>
                <value>
                    <fullName>Gates</fullName>
                </value>
                <value>
                    <fullName>Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>synthconfigs__c</fullName>
        <label>SynthConfigs</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>techkey__c</fullName>
        <label>Techkey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>technology__c</fullName>
        <label>Design System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tmp_configlatches__c</fullName>
        <label>M-tmp_configlatches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>todayseditors__c</fullName>
        <label>M-todayseditors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IP Cell</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ip__c</columns>
        <columns>ipkey__c</columns>
        <columns>iptype__c</columns>
        <columns>techkey__c</columns>
        <columns>area2logicc__c</columns>
        <columns>area2logiccells_calc__c</columns>
        <columns>area2logicgates_calc__c</columns>
        <columns>c2g_1__c</columns>
        <columns>area2logicg__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ip__c</field>
            <operation>contains</operation>
            <value>PLL</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>IP Cell Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IP Cell</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>